force-app/main/default/objects/VIParametres__c/VIParametres__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>VIParametres</label>
</CustomObject>