force-app/main/default/objects/VIParametres__c/fields/NB_elements_lies_max__c.field-meta.xml
<CustomField>
    <fullName>NB_elements_lies_max__c</fullName>
    <inlineHelpText>L&apos;application a été testé avec 35000 éléments liés à une affaire. Ici, on met le nombre max (par exemple 20.000) car il n&apos;est pas normal d&apos;aller au delà</inlineHelpText>
    <label>NB elements liés max</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>