force-app/main/default/objects/VIParametres__c/fields/Nb_jours_conservation_LA__c.field-meta.xml
<CustomField>
    <fullName>Nb_jours_conservation_LA__c</fullName>
    <defaultValue>60</defaultValue>
    <inlineHelpText>Nombre de jours pendant lesquels on conserve les lignes  d&apos;affaire</inlineHelpText>
    <label>Nb_jours_conservation_LA</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>