force-app/main/default/objects/VIParametres__c/fields/Nb_jours_retention_import__c.field-meta.xml
<CustomField>
    <fullName>Nb_jours_retention_import__c</fullName>
    <label>Nb_jours_retention_import</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>