force-app/main/default/objects/VIParametres__c/fields/Sans_Calcul_de_PRI__c.field-meta.xml
<CustomField>
    <fullName>Sans_Calcul_de_PRI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si coché, on fait le calcul avec les taux.Sinon, on prend les montants tel quel</inlineHelpText>
    <label>Sans Calcul de PRI ?</label>
    <type>Checkbox</type>
</CustomField>